--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "seed": "node src/infrastructure/Seed.js"
   },
   "author": "",
   "license": "ISC",
