--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "sourceMap": true,
     "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
     "lib": ["esnext"],
     "esModuleInterop": true,
