--- a/back-end/package.json
+++ b/back-end/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.18.1",
     "node-cron": "^4.2.1",
     "stripe": "^20.0.0",
+    "svix": "^1.82.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.11"
   },
