--- a/data-api/package.json
+++ b/data-api/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon src/index.ts",
     "dev:ngrok": "ngrok start back-end --config=ngrok.yml",
     "seed": "ts-node src/infrastructure/seed.ts",
-    "build": "tsc",
+    "build": "npm install && tsc",
     "start": "node ./dist/index.js"
   },
   "author": "",
